@@ -1,6 +1,7 @@
 Changes for 2.2.4rc1
 
 Bug fixes:
+..F....... [ZBX-7976] fixed template "unlink and clear" leaving items attached to parent template (Ivo)
 ..F....... [ZBX-7545] fixed item mass update form being rendered with a delay when updating template items (Pavels)
 ..F....... [ZBX-7864] fixed filter by host group in "Availability reports" page (Oleg)
 
